kube-news.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: postgre
spec:
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: postgres:13.1
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector:
    app: postgre
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubenews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubenews
  template:
    metadata:
      labels:
        app: kubenews
    spec:
      containers:
      - name: kubenews
        image: andersonbatistaferreiracosta/kube-news:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kubenews
spec:
  selector:
    app: kubenews
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP 

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubenews
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - backend:
          service:
            name: kubenews
            port:
              number: 80
        path: /
        pathType: Prefix


# kubectl port-forward svc/kubenews -n default 30868:8080
